monitor.scss: Fix white space/new lines (instead of *monitor.html.twig)

--- a/src/bundle/Resources/public/scss/monitor.scss
+++ b/src/bundle/Resources/public/scss/monitor.scss
@@ -37,7 +37,7 @@
   }
 }
 
-.physical_memory_usage, swap_space_usage {
+.physical_memory_usage, .swap_space_usage {
   table td {
     white-space: nowrap;
   }
